--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ header nav ul li a {
 .banner {
     position: relative;
     width: 100%;
-    height: 750px;
+    height: 900px;
     background: url('banner.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
@@ -59,9 +59,73 @@ header nav ul li a {
     text-align: center;
     color: white;
     filter: grayscale(0%); /* Mustavalkoinen efekti */
+    opacity: 0.7; /* Added opacity */
 }
 
 .banner h1 {
+    font-size: 8.5em;
+    position: relative;
+    z-index: 1;
+}
+
+/* Uusi osio */
+.new-section {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background: url('image.png') no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    filter: grayscale(0%); /* Mustavalkoinen efekti */
+    opacity: 0.8; /* Added opacity */
+}
+
+.new-section h1 {
+    font-size: 8.5em;
+    position: relative;
+    z-index: 1;
+}
+
+/* Uusi osio 2 */
+.new-section2 {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background: url('image2.png') no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    filter: grayscale(0%); /* Mustavalkoinen efekti */
+    opacity: 0.8; /* Added opacity */
+}
+
+.new-section2 h1 {
+    font-size: 8.5em;
+    position: relative;
+    z-index: 1;
+}
+
+/* Uusi osio 3*/
+.new-section3 {
+    position: relative;
+    width: 100%;
+    height: 750px;
+    background: url('image3.png') no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    filter: grayscale(0%); /* Mustavalkoinen efekti */
+    opacity: 0.8; /* Added opacity */
+}
+
+.new-section3 h1 {
     font-size: 8.5em;
     position: relative;
     z-index: 1;
