--- a/index.css
+++ b/index.css
@@ -11,13 +11,13 @@ body {
 
 /* Ylävalikko */
 header {
-    background: transparent; /* Changed from #000 to transparent */
+    background: transparent;
     color: #fff;
     padding: 10px 0;
     text-align: center;
     position: absolute;
     width: 100%;
-    z-index: 2; /* Ensure header is above the banner */
+    z-index: 2;
 }
 
 header .navbar {
@@ -48,19 +48,19 @@ header nav ul li a {
     text-decoration: none;
 }
 
-/* Pääbanneri */
+/* Hero */
 .banner {
     position: relative;
     width: 100%;
-    height: 100vh; /* Full screen height */
+    height: 100vh;
     background: url('banner.png') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
-    background-color: rgba(0, 0, 0, 0.7); /* Solid black overlay */
-    background-blend-mode: multiply; /* Blend the overlay with the image */
+    background-color: rgba(0, 0, 0, 0.7);
+    background-blend-mode: multiply;
     
     z-index: 1;
 }
@@ -77,8 +77,8 @@ header nav ul li a {
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 200px; /* Adjust size as necessary */
-    z-index: 4; /* Ensure logo is above the banner */
+    height: 200px;
+    z-index: 4;
 }
 
 .banner .banner-text {
@@ -88,65 +88,19 @@ header nav ul li a {
     transform: translateX(-50%);
     font-size: 2em;
     color: white;
-    z-index: 4; /* Ensure text is above the banner */
+    z-index: 4;
 }
 
 /* Placeholder Title */
 .placeholder {
     padding: 20px 0;
     text-align: center;
+    background: #000;
 }
 
 .placeholder h2 {
     font-size: 2em;
-    color: #333;
-}
-
-/* Pelit */
-.games {
-    padding: 20px 0;
-}
-
-.games .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.games h2 {
-    width: 100%;
-    text-align: left;
-    margin-bottom: 20px;
-    padding-left: 20px;
-}
-
-.games .game {
-    background: #fff;
-    margin: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    flex: 1 1 calc(33% - 40px);
-    box-sizing: border-box;
-}
-
-.games .game img {
-    max-width: 100%;
-    height: auto;
-}
-
-.games .game h3 {
-    margin-top: 0;
-}
-
-.games .game p {
-    color: #666;
-}
-
-.games .game a {
-    display: inline-block;
-    margin-top: 10px;
-    color: #000;
-    text-decoration: none;
+    color: #fff;
 }
 
 /* Footer */
