--- a/index.css
+++ b/index.css
@@ -156,6 +156,16 @@ header nav ul li a {
     z-index: 2;
 }
 
+/* Stunt Car Images */
+.stunt-car-images {
+    display: flex;
+}
+
+.stunt-car-images .stunt-car {
+    width: 50%;
+    height: auto;
+}
+
 /* Footer */
 footer {
     background: #000;
